src/pages/clippingsMgr.css
/* ... */
html {
    height: 100%;
}

body {
    margin: 0;
    height: 100%;
    overflow: hidden;
    background-color: var(--color-bkgd);
    font-size: 12px;
    color: var(--color-default-text);
}

button {
    font-size: 12px;
}

button[disabled] {
    opacity: 0.4;
}

input[type="text"],
input[type="search"] {
    height: 24px;
}

select {
    background-color: var(--color-listbox-bkgd);
    color: var(--color-default-text);
    font: caption;
}

.browser-style > input[type="text"][readonly]:focus,
.browser-style > input[type="text"][readonly]:focus:hover {
    border-color: transparent;
    box-shadow: none;
}

input[type="checkbox"] + label {
    vertical-align: 0;
}

body[data-os="win"] input[type="checkbox"] + label {
    vertical-align: 3px;
}

.hbox, .vbox {
    display: flex;
    justify-content: flex-start;
}

.hbox {
    flex-flow: row nowrap;
}

.vbox {
    flex-flow: column nowrap;
}

.spacer {
    width: 24px;
}

.toolbar-button {
    flex: 0 1 auto;
    align-self: stretch;
    min-width: 30px;
    margin-left: 0;
    margin-right: 0;
    border: 1px solid transparent;
    background-position: center;
    background-repeat: no-repeat;
    background-color: transparent;
    color: var(--color-main-toolbar-text);
    font: caption;
    font-size: 11px;
}

.toolbar-button:hover {
    border: 1px solid transparent;
    border-radius: 2px;
    background-color: var(--color-toolbarbtn-hover-bkgd);
}

.toolbar-button:active {
    border: 1px solid transparent !important;
    border-radius: 2px;
    background-color: var(--color-toolbarbtn-active-bkgd);
}

.toolbar-button-menu-open {
    Border-radius: 2px 2px 0px 0px;
    background-color: var(--color-toolbar-menubtn-open);
}

.toolbar-button-labelled {
    background-position: 4px;
    padding-left: 24px;
    padding-right: 6px;
}

.toolbar-button-labelled:active {
    background-position: 4px;
    padding-left: 24px;
    padding-right: 6px;
}

#banner {
    display: none;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 16px;
    background-color: lightgoldenrodyellow;
    border-bottom: 1px solid khaki;
}

#toolbar {
    height: var(--toolbar-height);
    padding-left: 2px;
    padding-top: 2px;
    padding-bottom: 2px;
    background: var(--color-main-toolbar-bkgd);
    color: var(--color-main-toolbar-text);
    border-bottom: 1px solid var(--color-main-toolbar-border);
}

#toolbar > #new-clipping {
    order: 1;
    background-image: var(--url-toolbar-btn-img-newClipping);
}

#toolbar > #new-clipping:hover {
    background-image: url("../img/newClipping_hover.svg");
}

#toolbar > #new-folder {
    order: 2;
    background-image: var(--url-toolbar-btn-img-newFolder);
}

#toolbar > #new-folder:hover {
    background-image: url("../img/newFolder_hover.svg");
}

#toolbar > #move {
    order: 3;
    background-image: url("../img/moveTo.svg");
}

#toolbar > #move:hover {
    background-image: url("../img/moveTo_hover.svg");
}

#toolbar > #delete {
    order: 4;
    background-image: url("../img/delete.svg");
}

#toolbar > #delete:hover {
    background-image: url("../img/delete_hover.svg");
}

#toolbar > #undo {
    order: 5;
    background-image: var(--url-toolbar-btn-img-undo);
}

#toolbar > #undo:hover {
    background-image: var(--url-toolbar-btn-img-undo-hover);
}

#toolbar > #undo:active {
    background-image: var(--url-toolbar-btn-img-undo-active);
}

#toolbar > #spacer-1 {
    order: 6;
}

#toolbar > #clippings-mgr-options {
    order: 7;
    padding-right: 12px;
    background-image: var(--url-toolbar-btn-img-tools), var(--url-toolbar-btn-img-dropdown);
    background-position-x: 4px, right;
    
}

#toolbar > #clippings-mgr-options:hover {
    background-image: var(--url-toolbar-btn-img-tools-hover), var(--url-toolbar-btn-img-dropdown);
}

#toolbar > #clippings-mgr-options:active {
    background-image: var(--url-toolbar-btn-img-tools-active), var(--url-toolbar-btn-img-dropdown);
}

#toolbar > #clippings-mgr-options.toolbar-button-menu-open {
    background-image: var(--url-toolbar-btn-img-tools-menu-open), var(--url-toolbar-btn-img-dropdown);
}

/* jQuery contextMenu CSS overrides */
.context-menu-list {
    border: 1px solid var(--color-cxtmenu-border);
    background-color: var(--color-cxtmenu-bkgd);
}

.ae-menuitem,
.context-menu-submenu {
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 12px;
    background-color: var(--color-cxtmenu-bkgd);
    color: var(--color-cxtmenu-text);
}

.context-menu-item.context-menu-disabled {
    background-color: var(--color-cxtmenu-bkgd);
}

.context-menu-disabled:hover {
    background-color: transparent;
}

.ae-menuitem:active {
    background-color: var(--color-cxtmenu-menuitem-active-bkgd) !important;
}

.context-menu-item.context-menu-hover {
    background-color: var(--color-cxtmenu-menuitem-hover-bkgd);
    color: var(--color-cxtmenu-menuitem-hover-text);
    cursor: default;
}

.context-menu-separator {
    border-bottom: 1px solid var(--color-cxtmenu-separator);
}

.context-menu-icon-checked {
    background-image: var(--url-contextmenu-checked-img);
    background-repeat: no-repeat;
    background-position-x: 4px;
    background-position-y: center;
}

.context-menu-submenu {
    background-image: var(--url-contextmenu-submenu-arrow);
    background-repeat: no-repeat;
    background-position-x: right 3px;
    background-position-y: 4px;
}

.context-menu-submenu::after {
    content: unset;
}

#toolbar > #spacer-2 {
    order: 8;
    flex: 1 1 auto;
}

#toolbar > #search-clippings-and-folders {
    order: 9;

    margin-top: 1px;
    margin-bottom: 1px;
    margin-right: -12px; /* To accommodate "clear search" button hack. */
}

#search-box {
    width: 220px;
    height: 100%;
    padding-right: 20px;

    font-size: 11px;
}
/* ... */

